// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Default render of table header cell 1`] = `
<th
  className="table-heading-cell"
>
  <div
    className="apm-cursor-p"
    onClick={[Function]}
  >
    
     
  </div>
</th>
`;

exports[`Table header cell that is sorted 1`] = `
<th
  className="table-heading-cell"
>
  <div
    className="apm-cursor-p"
    onClick={[Function]}
  >
    
     
  </div>
</th>
`;

exports[`Table header cell that is sorted with a sort icon 1`] = `
<th
  className="table-heading-cell"
>
  <div
    className="apm-cursor-p"
    onClick={[Function]}
  >
    
     
    <i />
  </div>
</th>
`;

exports[`Table header cell with a custom class 1`] = `
<th
  className="table-heading-cell foo"
>
  <div
    className="apm-cursor-p"
    onClick={[Function]}
  >
    
     
  </div>
</th>
`;

exports[`Table header cell with a title 1`] = `
<th
  className="table-heading-cell"
>
  <div
    className="apm-cursor-p"
    onClick={[Function]}
  >
    Foo
     
  </div>
</th>
`;
